post request working

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,7 +29,7 @@
                 "yAxisName": "Revenues",
                 //Making the chart export enabled in various formats
                 "exportEnabled": "1",
-                "exportHandler": "fc_exporter/pageLoad",
+                "exportHandler": "http://localhost:3000/fc_exporter/pageLoad/",
                 "numberPrefix": "$",
                 "theme": "fint"
             },
