file downloading works

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 -->
 
 <div id="chart-container">FusionCharts will render here</div>
-
+<div id="chart-container2">FusionCharts will render here</div>
 <script type="text/javascript">
 
 	FusionCharts.ready(function () {
@@ -76,4 +76,389 @@
 
     revenueChart.render();
 });
+
+FusionCharts.ready(function() {
+  var myChart = new FusionCharts({
+    "type": "ZoomScatter",
+    "renderAt": "chart-container2",
+    "width": "600",
+    "height": "400",
+    "dataFormat": "json",
+    "dataSource": {
+      "chart": {
+        "caption": "Customer Happiness by Response time",
+        "exportEnabled": "1",
+        "exportHandler": "http://localhost:3000/fc_exporter/pageLoad/",
+        "Charttopmargin": "20",
+        "yaxisname": "Customer Happiness",
+        "xaxisname": "Time to respond (in minutes)",
+        "showAlternateHGridColor": "0",
+        "yaxismaxvalue": "9",
+        "showlegend": "0",
+        "bgcolor": "#40526A",
+        "bgAlpha": "100",
+        "canvasbgAlpha": "0",
+        "baseFontColor": "#F7F3E7",
+        "divlineAlpha": "100",
+        "divLineDashed": "0",
+        "ToolTipBgColor": "#F37C7E",
+        "rotateYAxisName": "1",
+        "canvasBorderColor": "#ffffff",
+        "canvasBorderThickness": ".5",
+        "canvasBorderAlpha": "100",
+        "plotTooltext": "<div id='valueDiv'>Response time : <b>$xDataValue</b>, Satisfaction : <b>$yDataValue</b></div>"
+      },
+      "dataset": [{
+        "drawline": "0",
+
+        "color": "#6baa01",
+        "anchorsides": "15",
+        "anchorradius": "4",
+        "anchorbgcolor": "#40526A",
+        "anchorBorderThickness": "3",
+        "anchorbordercolor": "#F37C7E",
+        "data": [{
+          "id": "tkt01",
+          "x": "5",
+          "y": "7.8"
+        }, {
+          "id": "tkt02",
+          "x": "7",
+          "y": "8.45"
+        }, {
+          "id": "tkt03",
+          "x": "8",
+          "y": "8.02"
+        }, {
+          "id": "tkt04",
+          "x": "10",
+          "y": "8.1"
+        }, {
+          "id": "tkt05",
+          "x": "5",
+          "y": "8.3"
+        }, {
+          "id": "tkt06",
+          "x": "5",
+          "y": "7"
+        }, {
+          "id": "tkt07",
+          "x": "2",
+          "y": "7.9"
+        }, {
+          "id": "tkt08",
+          "x": "7",
+          "y": "9"
+        }, {
+          "id": "tkt09",
+          "x": "6",
+          "y": "8.5"
+        }, {
+          "id": "tkt10",
+          "x": "3",
+          "y": "8.8"
+        }, {
+          "id": "tkt11",
+          "x": "16",
+          "y": "7.90"
+        }, {
+          "id": "tkt12",
+          "x": "5",
+          "y": "9"
+        }, {
+          "id": "tkt13",
+          "x": "14",
+          "y": "8"
+        }, {
+          "id": "tkt14",
+          "x": "5",
+          "y": "8"
+        }, {
+          "id": "tkt15",
+          "x": "17",
+          "y": "2"
+        }, {
+          "id": "tkt16",
+          "x": "24",
+          "y": "2.5"
+        }, {
+          "id": "tkt17",
+          "x": "3",
+          "y": "7"
+        }, {
+          "id": "tkt18",
+          "x": "16",
+          "y": "3"
+        }, {
+          "id": "tkt19",
+          "x": "4",
+          "y": "7"
+        }, {
+          "id": "tkt20",
+          "x": "2.15",
+          "y": "9"
+        }, {
+          "id": "tkt21",
+          "x": "5.67",
+          "y": "7.05"
+        }, {
+          "id": "tkt22",
+          "x": "10.94",
+          "y": "6"
+        }, {
+          "id": "tkt23",
+          "x": "24.97",
+          "y": "3"
+        }, {
+          "id": "tkt24",
+          "x": "28.15",
+          "y": "5"
+        }, {
+          "id": "tkt25",
+          "x": "2.76",
+          "y": "9"
+        }, {
+          "id": "tkt26",
+          "x": "11.53",
+          "y": "8.5"
+        }, {
+          "id": "tkt27",
+          "x": "3.31",
+          "y": "8.3"
+        }, {
+          "id": "tkt28",
+          "x": "20.73",
+          "y": "4"
+        }, {
+          "id": "tkt29",
+          "x": "4.96",
+          "y": "8"
+        }, {
+          "id": "tkt30",
+          "x": "7.77",
+          "y": "8"
+        }, {
+          "id": "tkt31",
+          "x": "16.56",
+          "y": "7"
+        }, {
+          "id": "tkt32",
+          "x": "2.73",
+          "y": "6"
+        }, {
+          "id": "tkt33",
+          "x": "4.96",
+          "y": "5"
+        }, {
+          "id": "tkt34",
+          "x": "7.2",
+          "y": "6"
+        }, {
+          "id": "tkt35",
+          "x": "10.56",
+          "y": "6.88"
+        }, {
+          "id": "tkt36",
+          "x": "16.56",
+          "y": "4"
+        }, {
+          "id": "tkt37",
+          "x": "2.73",
+          "y": "6"
+        }, {
+          "id": "tkt38",
+          "x": "4.96",
+          "y": "8"
+        }, {
+          "id": "tkt39",
+          "x": "5.2",
+          "y": "4"
+        }, {
+          "id": "tkt40",
+          "x": "11",
+          "y": "7.9"
+        }, {
+          "id": "tkt41",
+          "x": "15",
+          "y": "7"
+        }, {
+          "id": "tkt42",
+          "x": "17",
+          "y": "9"
+        }, {
+          "id": "tkt43",
+          "x": "8.5",
+          "y": "6.7"
+        }, {
+          "id": "tkt44",
+          "x": "12.6",
+          "y": "7.5"
+        }, {
+          "id": "tkt45",
+          "x": "24",
+          "y": "1.3"
+        }, {
+          "id": "tkt46",
+          "x": "27",
+          "y": "4"
+        }, {
+          "id": "tkt47",
+          "x": "25",
+          "y": "3.66"
+        }, {
+          "id": "tkt48",
+          "x": "21.5",
+          "y": "2.5"
+        }, {
+          "id": "tkt49",
+          "x": "20",
+          "y": "4.3"
+        }, {
+          "id": "tkt50",
+          "x": "29",
+          "y": "7"
+        }, {
+          "id": "tkt51",
+          "x": "25",
+          "y": "8"
+        }, {
+          "id": "tkt52",
+          "x": "27",
+          "y": "3.3"
+        }, {
+          "id": "tkt53",
+          "x": "18.5",
+          "y": "4"
+        }, {
+          "id": "tkt54",
+          "x": "18",
+          "y": "2.45"
+        }, {
+          "id": "tkt55",
+          "x": "4",
+          "y": "1"
+        }, {
+          "id": "tkt56",
+          "x": "27",
+          "y": "3.5"
+        }, {
+          "id": "tkt57",
+          "x": "25",
+          "y": "3"
+        }, {
+          "id": "tkt58",
+          "x": "27.5",
+          "y": "1"
+        }, {
+          "id": "tkt59",
+          "x": "28",
+          "y": "3"
+        }, {
+          "id": "tkt50",
+          "x": "26",
+          "y": "2.5"
+        }, {
+          "id": "tkt51",
+          "x": "15",
+          "y": "5"
+        }, {
+          "id": "tkt52",
+          "x": "18.9",
+          "y": "1"
+        }, {
+          "id": "tkt53",
+          "x": "21",
+          "y": "1.3"
+        }, {
+          "id": "tkt54",
+          "x": "1",
+          "y": "8"
+        }, {
+          "id": "tkt52",
+          "x": "0.5",
+          "y": "6.3"
+        }, {
+          "id": "tkt53",
+          "x": "23",
+          "y": "1.4"
+        }, {
+          "id": "tkt54",
+          "x": "25",
+          "y": "1.01"
+        }, {
+          "id": "tkt55",
+          "x": "25.1",
+          "y": "1.11"
+        }, {
+          "id": "tkt56",
+          "x": "28",
+          "y": "0.5"
+        }, {
+          "id": "tkt57",
+          "x": "25",
+          "y": "1.01"
+        }, {
+          "id": "tkt58",
+          "x": "25",
+          "y": "5"
+        }, {
+          "id": "tkt59",
+          "x": "28",
+          "y": "1.7"
+        }, {
+          "id": "tkt60",
+          "x": "23",
+          "y": "5.2"
+        }, {
+          "id": "tkt61",
+          "x": "26",
+          "y": "4.1"
+        }, {
+          "id": "tkt61",
+          "x": "22.6",
+          "y": "4.7"
+        }, {
+          "id": "tkt62",
+          "x": "23",
+          "y": ".3"
+        }, {
+          "id": "tkt63",
+          "x": "18.7",
+          "y": "2.8"
+        }, {
+          "id": "tkt64",
+          "x": "18.09",
+          "y": "1.8"
+        }, {
+          "id": "tkt65",
+          "x": "19.1",
+          "y": "1.8"
+        }, {
+          "id": "tkt66",
+          "x": "1",
+          "y": "5"
+        }, {
+          "id": "tkt67",
+          "x": "1.1",
+          "y": "5.66"
+        }, {
+          "id": "tkt68",
+          "x": "3",
+          "y": "5.02"
+        }, {
+          "id": "tkt69",
+          "x": "3.7",
+          "y": "7.02"
+        }, {
+          "id": "tkt70",
+          "x": "5",
+          "y": "7.033"
+        }]
+      }]
+    }
+  });
+
+  myChart.render();
+})
+
 </script>
