code clean up and commenting continues

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,7 +29,7 @@
                 "yAxisName": "Revenues",
                 //Making the chart export enabled in various formats
                 "exportEnabled": "1",
-                "exportHandler": "http://localhost:3000/fc_exporter/pageLoad/",
+                "exportHandler": "http://localhost:3000/fc_exporter/init/",
                 "numberPrefix": "$",
                 "theme": "fint"
             },
@@ -88,7 +88,7 @@ FusionCharts.ready(function() {
       "chart": {
         "caption": "Customer Happiness by Response time",
         "exportEnabled": "1",
-        "exportHandler": "http://localhost:3000/fc_exporter/pageLoad/",
+        "exportHandler": "http://localhost:3000/fc_exporter/init/",
         "Charttopmargin": "20",
         "yaxisname": "Customer Happiness",
         "xaxisname": "Time to respond (in minutes)",
